fix: small changes - color icons and overflow-x for body

--- a/styles/index.css
+++ b/styles/index.css
@@ -48,6 +48,7 @@ body {
   font-size: 16px;
   color: var(--clr-body-white);
   background-color: var(--clr-secondary);
+  overflow-x: hidden;
 }
 
 h1,
@@ -230,6 +231,10 @@ a.emphasise-txt {
   width: 18px;
   height: 18px;
   fill: var(--clr-body-white);
+}
+
+.social-link:hover svg {
+  fill: var(--clr-white);
 }
 
 .section-separator {
